--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
+        "swiper": "^11.0.6",
         "vue": "^3.4.15",
         "vue-axios": "^3.5.2"
     }
