--- a/package.json
+++ b/package.json
@@ -3,7 +3,33 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "clone_rep": "ssh u15739@91.236.136.179 -p 9999 \"git clone https://github.com/asmi046/ibex_laravel /www/ibex.ru\"",
+        "composer_remove": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php composer.phar dumpauto\"",
+        "composer_install": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php composer.phar install\"",
+        "composer_update": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php composer.phar update\"",
+        "pull_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && git pull\"",
+        "clean_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && git clean -f\"",
+        "stash": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && git stash\"",
+        "reset_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && git reset --hard\"",
+        "send_vite_build": "scp -C -r public/build u15739@91.236.136.179 -p 9999:/www/ibex.ru/public",
+        "migrate_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan migrate\"",
+        "rollback_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan migrate:rollback\"",
+        "seed_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan DB:seed\"",
+        "seed_rep_one": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan DB:seed AboutAndBonusSeeder\"",
+        "db_update": "npm run rollback_rep && npm run migrate_rep && npm run seed_rep",
+        "db_update_total": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan migrate:refresh --seed\"",
+        "optimized_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php composer.phar update --optimize-autoloader --no-dev\"",
+        "dump_autoload": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php composer.phar dump-autoload\"",
+        "storage_link": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan storage:link\"",
+        "key_gen": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan key:generate\"",
+        "cache_config": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan config:cache\"",
+        "cache_route": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan route:cache\"",
+        "cache_view": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan view:cache\"",
+        "cache_clear": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan cache:clear\"",
+        "optimize": "ssh u15739@91.236.136.179 -p 9999 \"cd /www/ibex.ru && /opt/php81/bin/php artisan optimize\"",
+        "optimize_all": "npm run optimize && npm run cache_clear && npm run cache_view && npm run cache_route && npm run cache_config",
+        "deploy_m": "vite build && npm run send_vite_build && npm run pull_rep && npm run optimize_all"
     },
     "devDependencies": {
         "axios": "^1.6.4",
