--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "clean_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && git clean -f\"",
         "stash": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && git stash\"",
         "reset_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && git reset --hard\"",
-        "send_vite_build": "scp -C -r public/build u15739@91.236.136.179 -p 9999:www/ibex.ru/public",
+        "send_vite_build": "scp -P 9999 -C -r public/build u15739@91.236.136.179:www/ibex.ru/public",
         "migrate_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan migrate\"",
         "rollback_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan migrate:rollback\"",
         "seed_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan DB:seed\"",
@@ -20,8 +20,8 @@
         "db_update": "npm run rollback_rep && npm run migrate_rep && npm run seed_rep",
         "db_update_total": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan migrate:refresh --seed\"",
         "optimized_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php composer.phar update --optimize-autoloader --no-dev\"",
-        "dump_autoload": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php composer.phar dump-autoload\"",
-        "storage_link": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan storage:link\"",
+        "dump_autoload": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php -d disable_functions=NULL composer.phar dump-autoload\"",
+        "storage_link": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php -d disable_functions=NULL artisan storage:link\"",
         "key_gen": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan key:generate\"",
         "cache_config": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan config:cache\"",
         "cache_route": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan route:cache\"",
