--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
         "rollback_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan migrate:rollback\"",
         "seed_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan DB:seed\"",
         "seed_rep_one": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan DB:seed AboutAndBonusSeeder\"",
-        "db_update": "npm run rollback_rep && npm run migrate_rep && npm run seed_rep",
-        "db_update_total": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php artisan migrate:refresh --seed\"",
         "optimized_rep": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php composer.phar update --optimize-autoloader --no-dev\"",
         "dump_autoload": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php -d disable_functions=NULL composer.phar dump-autoload\"",
         "storage_link": "ssh u15739@91.236.136.179 -p 9999 \"cd www/ibex.ru && /opt/php81/bin/php -d disable_functions=NULL artisan storage:link\"",
@@ -41,6 +39,7 @@
         "@vitejs/plugin-vue": "^5.0.3",
         "swiper": "^11.0.6",
         "vue": "^3.4.15",
-        "vue-axios": "^3.5.2"
+        "vue-axios": "^3.5.2",
+        "vue-imask": "^7.6.1"
     }
 }
